--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,11 @@ android {
         }
     }
 
+//    Retrofit requires Java 8
+    compileOptions{
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -41,4 +46,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
 //    Gson
     implementation 'com.google.code.gson:gson:2.8.6'
+//    Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
 }
